--- a/书签.html
+++ b/书签.html
@@ -140,6 +140,7 @@
 					<DT><A HREF="https://plus.google.com/collection/sLR0p?utm_campaign=adp_series_coordinatorlayoutbehavior_021716&utm_medium=blog&utm_source=medium">Google+</A>
 					<DT><A HREF="https://techblog.toutiao.com/tag/android/">今日头条</A>
 					<DT><A HREF="https://jekton.github.io/">Jekton</A>
+					<DT><A HREF="https://www.jianshu.com/u/df76f81fe3ff">却把清梅嗅</A>
 				</DL><p>
 				<DT><H3 FOLDED>安卓开发</H3>
 				<DL><p>
