--- a/书签.html
+++ b/书签.html
@@ -142,6 +142,7 @@
 					<DT><A HREF="https://jekton.github.io/">Jekton</A>
 					<DT><A HREF="https://www.jianshu.com/u/df76f81fe3ff">却把清梅嗅</A>
 					<DT><A HREF="http://blog.cgsdream.org/">小松的技术博客</A>
+					<DT><A HREF="https://blankj.com/">blankj</A>
 				</DL><p>
 				<DT><H3 FOLDED>安卓开发</H3>
 				<DL><p>
